[package]
name = "render-core"
version = "0.1.0"
authors = ["Graham Wihlidal <graham@wihlidal.ca>"]
keywords = ["rust", "render", "gfx", "graphics", "hal", "3d", "directx", "direct3d", "d3d", "dx12", "directx12", "vulkan", "vk", "metal"]
homepage = "https://github.com/gwihlidal/render-rs"
repository = "https://github.com/gwihlidal/render-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
bitflags = "1.1.0"
chrono = "0.4.9"
downcast-rs = "1.0.4"
enum_primitive = "0.1.1"
fern = { version = "0.5.8", features = ["colored"] }
glob = "0.3"
guardian = "1.0"
libloading = "0.5.2"
log = "0.4"
option_set = "0.1.2"
serde = "1.0.101"
serde_derive = "1.0.101"
serde_json = "1.0.40"
strum = "0.18"
strum_macros = "0.18.0"
thiserror = "1.0"
winit = "0.19.3"

[lib]
doctest = false